@@ -1,14 +1,19 @@
 package com.electro.controller.client;
 
 import com.electro.constant.AppConstants;
+import com.electro.constant.FieldName;
+import com.electro.constant.ResourceName;
 import com.electro.dto.ListResponse;
 import com.electro.dto.client.ClientListedProductResponse;
-import com.electro.entity.general.Image;
+import com.electro.dto.client.ClientProductResponse;
+import com.electro.entity.BaseEntity;
 import com.electro.entity.product.Product;
-import com.electro.entity.product.Variant;
+import com.electro.exception.ResourceNotFoundException;
+import com.electro.mapper.client.ClientProductMapper;
 import com.electro.projection.inventory.SimpleProductInventory;
 import com.electro.repository.ProjectionRepository;
 import com.electro.repository.product.ProductRepository;
+import com.electro.repository.review.ReviewRepository;
 import lombok.AllArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -18,12 +23,13 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.lang.Nullable;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @RestController
 @RequestMapping("/client-api/products")
@@ -33,6 +39,8 @@ public class ClientProductController {
 
     private ProductRepository productRepository;
     private ProjectionRepository projectionRepository;
+    private ClientProductMapper clientProductMapper;
+    private ReviewRepository reviewRepository;
 
     @GetMapping
     public ResponseEntity<ListResponse<ClientListedProductResponse>> getAllProducts(
@@ -54,46 +62,47 @@ public class ClientProductController {
         List<Long> productIds = products.map(Product::getId).toList();
         List<SimpleProductInventory> productInventories = projectionRepository.findSimpleProductInventories(productIds);
 
+        // TODO: Load promotion
+
         List<ClientListedProductResponse> clientListedProductResponses = products
-                .map(product -> mapToResponse(product, productInventories)).toList();
+                .map(product -> clientProductMapper.entityToListedResponse(product, productInventories)).toList();
 
         return ResponseEntity.status(HttpStatus.OK).body(ListResponse.of(clientListedProductResponses, products));
     }
 
-    private ClientListedProductResponse mapToResponse(Product product, List<SimpleProductInventory> productInventories) {
-        ClientListedProductResponse clientListedProductResponse = new ClientListedProductResponse();
+    @GetMapping("/{slug}")
+    public ResponseEntity<ClientProductResponse> getProduct(@PathVariable String slug) {
+        Product product = productRepository.findBySlug(slug)
+                .orElseThrow(() -> new ResourceNotFoundException(ResourceName.PRODUCT, FieldName.SLUG, slug));
 
-        clientListedProductResponse
-                .setProductId(product.getId())
-                .setProductName(product.getName())
-                .setProductSlug(product.getSlug())
-                .setProductThumbnail(product.getImages().stream()
-                        .filter(Image::getIsThumbnail)
-                        .findAny()
-                        .map(Image::getPath)
-                        .orElse(null));
+        List<SimpleProductInventory> productInventories = projectionRepository
+                .findSimpleProductInventories(List.of(product.getId()));
 
-        List<Double> prices = product.getVariants().stream()
-                .map(Variant::getPrice).distinct().sorted().collect(Collectors.toList());
+        int averageRatingScore = reviewRepository.findAverageRatingScoreByProductId(product.getId());
+        int countReviews = reviewRepository.countByProductId(product.getId());
 
-        clientListedProductResponse.setProductPriceRange(
-                prices.size() == 1 ? List.of(prices.get(0)) : List.of(prices.get(0), prices.get(prices.size() - 1))
-        );
+        // Related Products
+        Page<Product> relatedProducts = productRepository.findByParams(
+                String.format("category.id==%s;id!=%s",
+                        Optional.ofNullable(product.getCategory()).map(BaseEntity::getId).map(Object::toString).orElse("0"),
+                        product.getId()),
+                "random",
+                null,
+                false,
+                false,
+                PageRequest.of(0, 4));
 
-        clientListedProductResponse.setProductVariants(product.getVariants().stream()
-                .map(variant -> new ClientListedProductResponse.ClientListedVariantResponse()
-                        .setVariantId(variant.getId())
-                        .setVariantPrice(variant.getPrice())
-                        .setVariantProperties(variant.getProperties()))
-                .collect(Collectors.toList()));
+        List<Long> relatedProductIds = relatedProducts.map(Product::getId).toList();
+        List<SimpleProductInventory> relatedProductInventories = projectionRepository.findSimpleProductInventories(relatedProductIds);
 
-        clientListedProductResponse.setProductSaleable(productInventories.stream()
-                .filter(productInventory -> productInventory.getProductId().equals(product.getId()))
-                .findAny()
-                .map(productInventory -> productInventory.getCanBeSold() > 0)
-                .orElse(false));
+        List<ClientListedProductResponse> relatedProductResponses = relatedProducts
+                .map(p -> clientProductMapper.entityToListedResponse(p, relatedProductInventories)).toList();
 
-        return clientListedProductResponse;
+        // Result
+        ClientProductResponse clientProductResponse = clientProductMapper
+                .entityToResponse(product, productInventories, averageRatingScore, countReviews, relatedProductResponses);
+
+        return ResponseEntity.status(HttpStatus.OK).body(clientProductResponse);
     }
 
 }
